kubernetes/filestash/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: filestash
  namespace: filestash
  labels:
    app: filestash
spec:
  replicas: 1
  selector:
    matchLabels:
      app: filestash
  template:
    metadata:
      labels:
        app: filestash
    spec:
      enableServiceLinks: true
      securityContext:
      containers:
      - name: filestash
        image: machines/filestash:latest
        ports:
        - containerPort: 8334
          name: http
        securityContext:
          privileged: false
        volumeMounts:
        - name: filestash-data
          mountPath: /app/data/state
      volumes:
      - name: filestash-data
        persistentVolumeClaim:
          claimName: filestash-data-pvc
