kubernetes/filestash/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: filestash
spec:
  selector:
    app: filestash
  ports:
  - name: http
    port: 8334
    targetPort: 8334
    protocol: TCP
